--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>GhibbleAI</title>
+    <subtitle>Copyright (c) GhibbleAI</subtitle>
+    <subtitle>ALL IP RIGHTS RESERVED 2026</subtitle>
 </head>
 <body>
     <div id="root"></div>
